--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@babel/polyfill": "^7.6.0",
     "cross-fetch": "^3.0.4",
     "eslint-utils": "^1.4.2",
+    "express": "^4.17.1",
+    "express-favicon": "^2.0.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
@@ -14,7 +16,8 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
+    "devstart": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -34,7 +37,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "core-js": "3"
-  }
+  "devDependencies": {}
 }
